--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -11,23 +11,23 @@
         android:layout_height="match_parent">
 
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/textViewOne"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/fragment_one" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/btnOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:text="@string/home_fragment"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:text="@string/fragment_one"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-        </androidx.appcompat.widget.AppCompatButton>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
